--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".view.activity.SignUpActivity"/>
         <activity android:name=".view.activity.MainActivity"/>
         <activity android:name=".view.activity.ChatActivity"/>
+        <activity android:name=".view.activity.SearchActivity"/>
     </application>
 
 </manifest>
